implementations/rust/ockam/ockam_node_test_attribute/tests/node/fail_if_passed_param_is_wrong_type.stderr
error: Expected `ockam::Context` found `std::string::String`
 --> $DIR/fail_if_passed_param_is_wrong_type.rs:5:20
  |
5 | async fn main(ctx: std::string::String) {}
  |                    ^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fail_if_passed_param_is_wrong_type.rs:4:1
  |
4 | / #[ockam_node_test_attribute::node]
5 | | async fn main(ctx: std::string::String) {}
  | |__________________________________________^ consider adding a `main` function to `$DIR/tests/node/fail_if_passed_param_is_wrong_type.rs`
